kubernetes/apps/cilium/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-versioned-schemas.pages.dev/gateway-api/1.5.1/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  parentRefs:
    - name: internal
      kind: Gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - hubble.clerici.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
